# Master_Project

./: CMakeLists.txt  README.md  main.cpp
CONTROLLERS/: backprobagation.cpp  backprobagation.h  controller.h  myController.cpp  myController.h
EVOL_ALGORITHM/: chromosome.h  ga.h  initialisation_param.txt  roulette_wheel.cpp  roulette_wheel.h
EXP/: experiment.cpp  experiment.h  mapWindow.cpp  mapWindow.h
EXP/DATA/: maze_navigation0.data  maze_navigation0.seed  new_0.data  new_0.seed  new_1.data  new_1.seed  new_10.data  new_10.seed  new_11.data  new_11.seed  new_12.data  new_12.seed  new_13.data  new_13.seed  new_14.data  new_14.seed  new_15.data  new_15.seed  new_16.data  new_16.seed  new_17.data  new_17.seed  new_18.data  new_18.seed  new_19.data  new_19.seed  new_20.data  new_20.seed  new_25.data  new_25.seed  new_26.data  new_26.seed  new_3.data  new_3.seed  new_5.data  new_5.seed  new_6.data  new_6.seed  new_7.data  new_7.seed  (+166 more)
EXP/GENOME/: maze_navigation0_pop_G40.geno  new_0_pop_G0.geno  new_0_pop_G10.geno  new_0_pop_G15.geno  new_0_pop_G20.geno  new_0_pop_G25.geno  new_0_pop_G30.geno  new_0_pop_G35.geno  new_0_pop_G40.geno  new_0_pop_G5.geno  new_10_pop_G0.geno  new_10_pop_G10.geno  new_10_pop_G15.geno  new_10_pop_G20.geno  new_10_pop_G25.geno  new_10_pop_G30.geno  new_10_pop_G35.geno  new_10_pop_G40.geno  new_10_pop_G45.geno  new_10_pop_G5.geno  new_10_pop_G50.geno  new_10_pop_G55.geno  new_10_pop_G60.geno  new_11_pop_G0.geno  new_11_pop_G10.geno  new_11_pop_G15.geno  new_11_pop_G20.geno  new_11_pop_G25.geno  (+1449 more)
MISC/: general.cpp  general.h  init_run.txt  parameters.cpp  parameters.h
ROB_SENSORS_OBJS/: matrix.h  occupancy_map.cpp  occupancy_map.h  simple_agents.cpp  simple_agents.h  simple_objects.cpp  simple_objects.h  world_entity.h
Report/: abstract.tex  acknowledgements.tex  controlle_uml.uxf  cover.tex  declaration.tex  dissertation.aux  dissertation.bbl  dissertation.blg  dissertation.dvi  dissertation.lof  dissertation.lol  dissertation.lot  dissertation.tex  dissertation.toc  exp_class_uml.uxf  occupancy_map_uml.uxf  parameters_uml.uxf  project_uml.uxf  simple_agent_uml.uxf  stefkla-master_project.bib  uml_simple.uxf
(+30 files in other folders)
