cmake_minimum_required(VERSION 2.8)

SET ( EXECUTABLE EVOSIM )

#This is for heterogenous groups
#add_definitions(-D_HETERO_)

# UNCOMMENT FOR GRAPHICS
add_definitions(-D_GRAPHICS_)

FIND_PACKAGE( Qt COMPONENTS QtOpenGL REQUIRED )
FIND_PACKAGE( Qt4 REQUIRED )
SET( QT_USE_QTOPENGL TRUE )
SET(  QT_USE_QTXML TRUE )
INCLUDE( ${QT_USE_FILE} )

FILE ( GLOB SOURCES ./*.cpp ./MISC/*.cpp ./EVOL_ALGORITHM/*.cpp ./ROB_SENSORS_OBJS/*.cpp ./EXP/*.cpp ./CONTROLLERS/*.cpp ./EXP/RENDERING/*.cpp)  
FILE ( GLOB HEADERS ./*.h ./MISC/*.h ./EVOL_ALGORITHM/*.h ./ROB_SENSORS_OBJS/*.cpp  ./EXP/*.h ./CONTROLLERS/*.h ./EXP/RENDERING/*.h) 
FILE ( GLOB UIS ./*.ui ./EXP/RENDERING/*.ui) 

QT4_WRAP_CPP( SOURCES ${HEADERS} )
QT4_WRAP_UI( SOURCES  ${UIS} )
FIND_PACKAGE ( GLUT )  
FIND_PACKAGE ( OpenGL )


INCLUDE_DIRECTORIES( ${BULLET_INCLUDE_DIR} /usr/include/bullet/ ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR} /usr/include/ /usr/local/include/ ${CMAKE_CURRENT_BINARY_DIR} ./EXP/RENDERING )
# UNCOMMENT FOR GRAPHICS


#  UNCOMMENT FOR NO GRAPHICS
#FILE ( GLOB SOURCES ./*.cpp ./MISC/*.cpp ./CONTROLLERS/*.cpp ./EVOL_ALGORITHM/*.cpp   ./EXP/*.cpp )
#FILE ( GLOB HEADERS ./*.h ./MISC/*.h ./CONTROLLERS/*.h ./EVOL_ALGORITHM/*.h   ./EXP/*.h )
#INCLUDE_DIRECTORIES( /usr/include/ ${CMAKE_CURRENT_BINARY_DIR} )
#  UNCOMMENT FOR NO GRAPHICS

ADD_EXECUTABLE( ${EXECUTABLE} ${SOURCES} EXP/mapWindow.h EXP/mapWindow.cpp ROB_SENSORS_OBJS/occupancy_map.h ROB_SENSORS_OBJS/occupancy_map.cpp)

# UNCOMMENT FOR GRAPHICS
TARGET_LINK_LIBRARIES( ${EXECUTABLE} QGLViewer ${OPENGL_glu_LIBRARY}  ${GLUT_LIBRARIES} -lGL -lGLU  ${QT_LIBRARIES} )#revel xvidcore
TARGET_LINK_LIBRARIES( ${EXECUTABLE} "-L/sw/lib -lgsl -lgslcblas -lm -L/usr/lib/ -lqwt -lpthread -lBulletSoftBody -lBulletDynamics -lBulletCollision -lLinearMath" ) #qwt-6.1.1-svn/lib -lNewton
TARGET_LINK_LIBRARIES( ${EXECUTABLE} -lSDL2 -lSDL2_image) #SDL2
# UNCOMMENT FOR GRAPHICS

#  UNCOMMENT FOR NO GRAPHICS
#TARGET_LINK_LIBRARIES( ${EXECUTABLE} )
#TARGET_LINK_LIBRARIES( ${EXECUTABLE} "-L/sw/lib -lgsl -lgslcblas -lm" )
#  UNCOMMENT FOR NO GRAPHICS

